# GlitchWorkshop

app/: CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake
app/java_backup/com/example/chris/imagebender/: BendOptionsActivity.java  BendingTarget.java  BendingView.java  CSApp.java  CSPrefs.java  DataSourceSelectionActivity.java  FFmpegLoadResponseHandler.java  FileUtils.java  GlitchAlgo.java  ImageUtils.java  MainActivity.java  NativelyCachedBmp.java  SplashActivity.java  VideoProcessingThread.java  VideoUtils.java
app/src/androidTest/java/com/example/chris/imagebender/: ExampleInstrumentedTest.java
app/src/cpp/: AndroidCl.cpp  AndroidCl.h  ArmEmitter.cpp  BitmapUtils.cpp  BitmapUtils.h  CSApplication.cpp  CSApplication.h  CSPrefs.cpp  CSPrefs.h  FileUtils.cpp  FileUtils.h  GlitchAlgo.cpp  GlitchAlgo.h  GlobalError.cpp  GlobalError.h  InitialSeed.cpp  JClassLoader.cpp  JClassLoader.h  JNIUtils.cpp  JNIUtils.h  JavaClass.cpp  JavaClass.h  NativelyCachedBmp.cpp  SharedLibrary.cpp  SharedLibrary.h  VideoBender.cpp  VideoBender.h  classnameCompression.h  cmdutils.cpp  cmdutils.h  csconfig.h  ffmpeg.cpp  ffmpeg.h  ffmpeg_filter.cpp  ffmpeg_opt.cpp  imacros.h  pixelsort.cpp  uncompressClassname.cpp
app/src/cpp/before_ffmpegcpp/: cmdutils.c  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c
app/src/cpp/include/: NativelyCachedBmp.h  config.h  glitch-common.h  jniHelpers.h  pixelsort.h
app/src/cpp/include/libavformat/: libavformat.pc
app/src/cpp/include/libavutil/: avassert.h  ffversion.h  log.h
app/src/cpp/include/old_libav/libavformat/: avformat.h
app/src/cpp/include/old_libav/libavutil/: avutil.h  dict.h  macros.h
app/src/cpp/videobender_backup/: VideoBender.cpp  VideoBender.h
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/chris/imagebender/: AboutActivity.java  BendOptionsActivity.java  BendingView.java  CSApp.java  DataSourceSelection.java  DataSourceSelectionActivity.java  FileUtils.java  GlitchAlgo.java  HelpActivity.java  HexEditorActivity.java  ImageUtils.java  MainActivity.java  NativeDialog.java  NativelyCachedBmp.java  PreferencesActivity.java  (+2 more)
app/src/main/res/drawable/: gradient_bg.xml  gradient_toolbar.xml  icon_border.xml  toolbar_border.xml
app/src/main/res/layout/: activity_about.xml  activity_bend_options.xml  activity_data_source_selection.xml  activity_help.xml  activity_main.xml  activity_preferences.xml  activity_splash.xml  content_about.xml  content_help.xml  toolbar.xml
app/src/main/res/menu/: menumain.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
(+1 files in other folders)
